# orca

./: .gitignore  .gitmodules  CMakeLists.txt
config/: config.yaml
include/: orca.hpp  orca_manager.hpp
src/: orca.cpp  orca_manager.cpp
test/: SimulationOrca.cpp
